   * The "tracks have been hidden in the playlist" warning when filtering the playlist is
     now displayed inside the playlist. (BR 260352)
   * Update tag widget for Layout edit, filter edit, organize collection and guess tag
     dialog.
   * When fadeout and/or Replay Gain isn't possible, gray-out related UI elements in order
     not to fool users.

  BUGFIXES:
   * Fix dynamic playlist bug: When "Automatically scroll playlist to current track"
     was enabled, Amarok would keep scrolling to the bottom. (BR 284214)
   * Fix a problem where ghost tracks would remain in the Local Collection until the
     database is wiped. (BR 319084)
   * Added missing CMake check for QtWebKit. (BR 321598)
   * Definitely fix a bug where Local Collection wouldn't update in browser. (BR 262504)
   * Fix crashed caused by race conditions at the end of the track scanning. (BR 319835)
   * Fix crash when disabling the Free Music Charts script. (BR 321329)
   * Albums having same name but different album artist won't be mixed together on the
     playlist if sorting by album is enabled.
   * Fix crash on startup with KDE 4.11. Patch by Hrvoje Senjan
     <hrvoje.senjan@gmail.com>. (BR 320855)
   * Fix tracks not able to be dragged around when playlist is shuffled. (BR 320129)
   * Prevent Last.fm scrobbles not being submitted until restart due to change in
     liblastfm 1.0.7. (BR 320219)
   * Resume Playback on Start will correctly restore paused state, instead
     of always starting in playing state. (BR 313330)
   * Optimize removal of tens of thousands of tracks from playlist. (BR 316242)
   * Fix `amarok --queue` which didn't actually queue the tracks. (BR 317385)
   * Fix suboptimal initial MusicBrainz tag dialog size by remembering it. (BR 269454)
   * Fix file-browser becoming empty when a file was moved to trash. (BR 317944)
   * Fix `amarok --play file.mp3` option didn't actually start playback.